<resources>
    <string name="app_name">Linea 1</string>
    <string name="txt_usuario">Número de Documento</string>
    <string name="txt_contrasena">Password</string>
    <string name="txt_acceso">Ingresar</string>
    <string name="txt_num_doc">Número de Documento</string>
    <string name="txt_nombre_completo">Nombres Completos</string>
    <string name="txt_apellido_completo">Apellidos Completos</string>
    <string name="txt_celular">Celular</string>
    <string name="txt_correo">Correo Electronico</string>
    <string name="txt_contrasena1">Contraseña</string>
    <string name="txt_confirmar_contrasena">Confirmar Contraseña</string>
    <string name="btn_registrar">Registrar</string>
    <string name="txt_Tarjeta">Número de Tarejta</string>
    <string name="txt_Contrasena">Password</string>
    <string name="txt_ValidadContrasena">Verificar Password</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_principal">PrincipalActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_consulta_saldo">CONSULTAR SALDO</string>
    <string name="txt_ingresar_numero_tarjeta">Ingresar Numero tarjeta</string>
    <string name="txt_consulta">CONSULTAR</string>
    <string name="txt_Numero_Tarjeta">Numero de Tarjeta</string>
    <string name="google_android_map_api_key">AIzaSyCVjymaOjisU-UYQ85SM0wMSjVUuiuNgqw</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_estacion">Map</string>
</resources>
