<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/scheduleAppBarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/btn_rectangulo"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="ACTUALIZAR DATOS"
                android:textColor="@color/White"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_registro"
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/linear_login_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear_login_secundary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">




                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="15sp">

                        <EditText
                            android:id="@+id/etNombreCompletoUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableLeft="@drawable/ic_user"
                            android:drawablePadding="10dp"
                            android:hint="@string/txt_nombre_completo"
                            android:inputType="text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/Black"
                            android:textSize="15sp" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="15sp">

                        <EditText
                            android:id="@+id/etApellidoCompletoUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_user"
                            android:drawablePadding="10dp"
                            android:hint="@string/txt_apellido_completo"
                            android:inputType="text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/Black"
                            android:textSize="15sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="15sp">

                        <EditText
                            android:id="@+id/etTelefonoUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_celular"
                            android:drawablePadding="10dp"
                            android:hint="@string/txt_celular"
                            android:inputType="phone"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/Black"
                            android:textSize="15sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="15sp">

                        <EditText
                            android:id="@+id/etCorreoUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_mail"
                            android:drawablePadding="10dp"
                            android:hint="@string/txt_correo"
                            android:inputType="textEmailAddress"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/Black"
                            android:textSize="15sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/Black"
                        android:textColorHint="@color/Black"
                        android:textSize="15sp">

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/White"
                        android:textColorHint="@color/Black"
                        android:textSize="15sp">

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/White"
                        android:textColorHint="@color/Black"
                        android:textSize="15sp">

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/btn_rectangulo"
                        android:gravity="center_horizontal|center"
                        android:padding="6dp"
                        android:text="ACTUALIZAR"
                        android:textColor="@color/White"
                        android:theme="@style/FaceButtonStyle" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
