<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/scheduleAppBarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="@drawable/btn_rectangulo"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="CONTROL DE ACCESO"
                android:textSize="15sp"
                android:textColor="@color/White"
                android:textStyle="bold"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_login_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_logo" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_login_second"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_marginTop="45dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:id="@+id/linear_login_secundary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/etUsua"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:hint="@string/txt_usuario"
                        android:inputType="number"
                        android:password="false"
                        android:textColor="@color/Black"
                        android:textSize="17sp"
                        tools:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/etContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_pass"
                        android:drawablePadding="10dp"
                        android:hint="@string/txt_contrasena"
                        android:inputType="textPassword"
                        android:singleLine="false"
                        android:textColor="@color/Black"
                        android:textSize="17sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal|center"
                    android:onClick="fnOnClickRegistro"
                    android:padding="6dp"
                    android:text="@string/txt_acceso"
                    android:textColor="@color/White"
                    android:theme="@style/FaceButtonStyle"
                    android:background="@drawable/btn_rectangulo"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="fnOnClickRegistro"
                android:padding="10dp"
                android:text="¿No cuentas con usuario? Crear una cuenta."
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:layout_weight="1.60" />

            <TextView
                android:id="@+id/tvVisitante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="fnOnClickVisitante"
                android:padding="10dp"
                android:text="Ingresar como visitante"
                android:textAlignment="center"
                android:textColor="@color/Black" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
